# mingw-w64-x86_64-static-tesseract

./: .cproject  .gitignore  .project  CMakeLists.txt  progress.rtf  readme.md  ~$ogress.rtf
Debug/: readme.md
results/: performance_D20200321.csv
src/: tesseractAPITest.cpp  tesseractCommandLineTest.cpp
src/CommandLine/: main.cpp
src/ShellAPI/: main.cpp
